--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   # Кодогенерация
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
